--- a/public/css/style.css
+++ b/public/css/style.css
@@ -182,6 +182,10 @@ h5 {
   padding-top: 15px !important;
   padding-bottom: 10px !important;
 }
+.wrapper-big {
+  padding-top: 50px !important;
+  padding-bottom: 25px !important;
+ }
 .signup-select:after {
   content: "";
   position: absolute;
@@ -435,4 +439,18 @@ h5 {
 }
 .home-booking-text {
   color:#fff;
+}
+.title-section {
+  background: url("/images/cleaning-breadcrumb-bg.jpeg") ;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  margin-top: -2% !important;
+}
+.service-title {
+  margin-top: 5% !important;
+  margin-bottom: 5% !important;
+}
+.bg-light{
+  background-color: #fff !important;
 }
