--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.cdnfonts.com/css/glacial-indifference-2');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 
 body {
-    font-family: 'Glacial Indifference', sans-serif !important;
+    font-family: 'Montserrat', sans-serif;
+    font-size:110% !important;
 }
 a {
   color:#0d0d0d !important;
