--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sorts+Mill+Goudy&display=swap');
 
+* {
+  transition: all 0.3s ease-out;
+}
 
 body {
     /* font-family: 'Montserrat', sans-serif; */
@@ -485,4 +488,77 @@ h1, h2, h3, h4, h5 {
 .material-symbols-outlined {
     display: inline-flex;
     vertical-align: top;
+}
+
+/* service cards styles */
+.go-corner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  top: 0;
+  right: 0;
+  background-color: #E537C2;
+  border-radius: 0 4px 0 32px;
+}
+
+.go-arrow {
+  margin-top: -4px;
+  margin-right: -4px;
+  color: white;
+  font-family: courier, sans;
+}
+
+.card1 {
+  display: block;
+  position: relative;
+  background-color: #ffffff;
+  border-radius: 20px !important;
+  padding: 32px 24px;
+  margin: 5px;
+  text-decoration: none;
+  z-index: 0;
+  overflow: hidden;
+  box-shadow: 0px 4px 15px -3px rgba(0,0,0,0.1);
+
+  &:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: -16px;
+    right: -16px;
+    background: #E537C2;
+    height: 32px;
+    width: 70px;
+    border-radius: 32px;
+    transform: scale(1);
+    transform-origin: 50% 50%;
+    transition: transform 0.25s ease-out;
+  }
+
+  &:hover:before {
+    transform: scale(21);
+  }
+}
+
+.card1:hover {
+  color: #fff !important;
+  p {
+    transition: all 0.3s ease-out;
+    color: #ffffff !important;
+  }
+  h5 {
+    transition: all 0.3s ease-out;
+    color: #ffffff !important;
+  }
+}
+.section-title {
+  margin-top:4% !important;
+  margin-bottom:4% !important;
+}
+.features {
+  background-color: #f2f6f7 !important;
 }
