--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Sorts+Mill+Goudy&display=swap');
 
 * {
@@ -6,8 +8,10 @@
 }
 
 body {
+    font-family: 'Nunito', sans-serif !important;
+  /* font-family: 'Open Sans', sans-serif; */
     /* font-family: 'Montserrat', sans-serif; */
-    font-family: Garamond !important;
+    /* font-family: Garamond !important; */
     font-size:110% !important;
     color: #3a3a3a;
 }
@@ -92,7 +96,7 @@ h1, h2, h3, h4, h5 {
   border-radius: 20px !important;
     margin-bottom: 15px;
     /* padding: 6px 15px; */
-    background-color: #e5e7eb !important;
+    background-color: #eeeff1 !important;
     border:none !important;
     text-align: center !important;
 }
