--- a/public/css/style.css
+++ b/public/css/style.css
@@ -526,7 +526,7 @@ h1, h2, h3, h4, h5 {
   text-decoration: none;
   z-index: 0;
   overflow: hidden;
-  box-shadow: 0px 4px 15px -3px rgba(0,0,0,0.1);
+  /* box-shadow: 0px 4px 15px -3px rgba(0,0,0,0.1); */
 
   &:before {
     content: "";
